# supervisor

./: .env.example  METADATA.json  README.md  pyproject.toml  requirements.txt  run.py  supervisor.service
supervisor/: __init__.py  __main__.py  caddy.py  config.py  cron.py  fixer.py  jobs.py  main.py  models.py  monitor.py  process.py  robot_integration.py
supervisor/prompts/: onboard.md  security_scan.md
supervisor/static/: caddy.js  chat.js  core.js  cron.js  jobs.js  monitoring.js  services.js  styles.css
supervisor/templates/: index.html
